--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
         <title>Windows</title>
     </head>
     <body>
-        <main class="wrapper">
-        <section>
-            <p></p>
-        </section>
+        <main>
+           <section>
+              <p></p>
+           </section>
 
-        <section>
-            <p></p>
-        </section>
+           <section>
+              <p></p>
+           </section>
 
-        <section>
-            <p></p>
-        </section>
+           <section>
+              <p></p>
+           </section>
 
-        <section>
-            <p></p>
-        </section>
-        </div>   
+           <section>
+              <p></p>
+           </section>
+        </main>   
     </body>
 </html>
